<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_nanodegree_app">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger_app">Build It Bigger</string>
    <string name="xyz_reader_app">XYZ Reader</string>
    <string name="capstone_my_own_app">Capstone: My Own App</string>
    <string name="capstone_app">Capstone App</string>

    <string name="this_button_will_launch_my">This button will launch my</string>
    <string name="app">App</string>


</resources>
