<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".HomeActivity">

        <TextView
            android:text="@string/my_nanodegree_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/headerText"
            android:gravity="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            android:onClick="launchSpotifyStreamer"
            style="@style/appButton"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores_app"
            android:onClick="launchScoresApp"
            style="@style/appButton"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            android:onClick="launchLibraryApp"
            style="@style/appButton"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger_app"
            android:onClick="launchBuildItBiggerApp"
            style="@style/appButton"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader_app"
            android:onClick="launchXYZReaderApp"
            style="@style/appButton"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone_my_own_app"
            android:onClick="launchCapstoneApp"
            style="@style/capstoneAppButton"/>

    </LinearLayout>

</ScrollView>
